--- a/templates/siegeengine2/sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss
+++ b/templates/siegeengine2/sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss
@@ -55,3 +55,86 @@
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
 
+
+.element{
+  width: 82px;
+  height: 77px;
+  text-align: center;
+  background-color: red;
+  margin: 1% auto;
+  a {
+    position: relative;
+    left: 0;
+    top: 45px;
+    color: white;
+    font-family: Arial, Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+    font-size: 14px;
+  }
+  :hover{
+    // top: 45px;
+  } 
+} 
+
+ul{
+  margin-top: 5%;
+  margin-left: 250px;
+  .element {
+    list-style: none;
+  }
+}
+
+@media screen and (min-width: 1250px){ ul{ margin-left: 15%; } }
+
+li.element{
+  border: 6px solid transparent;
+}
+li.element:hover{
+     border: 6px solid black;
+  }
+ 
+
+.menu{
+  .item-102{
+    background-color: rgb(235,106,66);
+  }
+  .item-103{
+  background-color: rgb(255,230,25);
+  }
+  .item-104{
+  background-color: rgb(133,189,97);
+  }
+  .item-105{
+  background-color: rgb(0,171,164);
+  }
+  .item-106{
+  background-color: rgb(83,142,180);
+  }
+  .item-107{
+  background-color: rgb(124,101,150);
+  }
+  .item-108{
+  background-color: rgb(128,130,133);
+  }
+}
+
+#sidebar{
+  position: absolute;
+  top: 0%;
+  left: 1%;
+  min-height: 600px;
+  padding: 1%;
+  border: 1px solid black;
+  text-align: center;
+  vertical-align: bottom;
+  p{
+    margin: 1px auto;
+    position: relative;
+    top: 370px;
+    font-weight: bold;
+
+  }
+}
+
+#footer{
+  margin-left: 5%;
+}
