--- a/templates/siegeengine2/sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss
+++ b/templates/siegeengine2/sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss
@@ -83,7 +83,16 @@ ul{
   }
 }
 
-@media screen and (min-width: 1250px){ ul{ margin-left: 15%; } }
+@media screen and (min-width: 1250px){
+
+  ul{ margin-left: 15%; }
+}
+
+@media screen and (max-width: 1000px){
+  #footer {
+    margin-left: 20%;
+  }
+}
 
 li.element{
   border: 6px solid transparent;
@@ -118,7 +127,9 @@ li.element:hover{
 }
 
 #sidebar{
-  position: absolute;
+  // position: absolute;
+  position: relative;
+  display: inline-block;
   top: 0%;
   left: 1%;
   min-height: 600px;
@@ -126,6 +137,8 @@ li.element:hover{
   border: 1px solid black;
   text-align: center;
   vertical-align: bottom;
+  float: left;
+  background-color: rgb(255,255,255);
   p{
     margin: 1px auto;
     position: relative;
@@ -135,6 +148,32 @@ li.element:hover{
   }
 }
 
-#footer{
+.footer{
   margin-left: 5%;
+  #ruler{
+    position: relative;
+    z-index: 200;
+  }
+  #girandola{
+    z-index: 200;
+    position: relative;
+    float: right;
+    margin-bottom: 100px;
+    right: 7%;
+
+  }
+}
+
+// section>header, section>article {
+//   // margin-left: 44%;
+//   display: inline-block;
+//   float: right;
+//   clear: right;
+// }
+
+.content {
+  // margin-left: 44%;
+  display: inline-block;
+  float: right;
+  clear: right;
 }
